# scout-soroban-examples

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-clean.sh  test-all.sh  test.sh
.github/workflows/: scout.yml
amm/: .gitignore  Cargo.toml  README.md
amm/cpamm/: Cargo.toml
amm/cpamm/src/: lib.rs  test.rs
amm/csamm/src/: lib.rs  test.rs
amm/src/: lib.rs  test.rs  token.rs
amm/token/: README.txt
amm/util/: Cargo.toml
amm/util/src/: lib.rs  rational.rs
governance/: Cargo.toml  README.md
governance/governance/: Cargo.toml
governance/governance/src/: lib.rs  test.rs
governance/mock-contract/: Cargo.toml  README.md
governance/src/: lib.rs  test.rs
mock-contract/: Cargo.toml
mock-contract/src/: lib.rs
multi-contract-caller/: README.md  full_test.sh
multi-contract-caller/1storage/src/: lib.rs
multi-contract-caller/2adder/: Cargo.toml
multi-contract-caller/3subber/: Cargo.toml
multi-contract-caller/4caller/: Cargo.toml
multi-contract-caller/storage/: Cargo.toml
multi-contract-caller/subber/: Cargo.toml
multi-contract-caller/subber/src/: lib.rs  test.rs
multisig/: Cargo.toml  README.md
multisig/src/: lib.rs  test.rs
payment-channel/: Cargo.toml  README.md
payment-channel/fuzz/: Cargo.toml
payment-channel/src/: lib.rs  test.rs
security-review/: README.md
soroswap-amm/: README.md
soroswap-amm/csamm/: Cargo.toml
soroswap-amm/src/: token.rs
soroswap-amm/util/src/: lib.rs  (+1 more)
src/: lib.rs  test.rs
vesting/: .gitignore  Cargo.toml  README.MD  README.md
vesting/fuzz/: Cargo.toml
vesting/src/: lib.rs  test.rs
(+13 files in other folders)
