[package]
name = "subber-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"
#storage-contract = { path = "../storage" }

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
storage-contract = { path = "../storage", features = ["testutils"] }

[features]
testutils = [
    "soroban-sdk/testutils",
    "storage-contract/testutils",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
